--- a/FictionHouse/FictionHouse.html
+++ b/FictionHouse/FictionHouse.html
@@ -43,16 +43,15 @@ Sheena, Queen of the Jungle appeared in that initial issue, soon becoming the co
 </p><p>
 Other features in Jumbo Comics #1 included three by future industry legend <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, representing his first comic-book work following his debut in Wild Boy Magazine: the science fiction feature The Diary of Dr. Hayward (under the pseudonym "Curt Davis"), the modern-West crimefighter strip Wilton of the West (as "Fred Sande"), and Part One of the swashbuckling serialization of Alexandre Dumas, père's The Count of Monte Cristo (as "Jack Curtiss"), each four pages long.
 </p><p>
-<li>Fight Comics (86 issues, Jan. 1940–Jan. 1954)
+<li><a href="../FightComics/FightComics.html">Fight Comics</a>
 <li><a href="../JumboComics/JumboComics.html">Jumbo Comics</a>
-<li>Jungle Comics (163 issues, Jan. 1940–Summer 1954)
+<li><a href="../JungleComics/JungleComics.html">Jungle Comics</a>
 <li><a href="../PlanetComics/PlanetComics.html">Planet Comics</a>
-<li>Rangers of Freedom Comics / Rangers Comics (69 issues, October 1941–Winter 1953)
-<li>Wings Comics (124 issues, Sept. 1940–1954)
+<li><a href="../RangersOfFreedom/RangersOfFreedom.html">Rangers of Freedom / Rangers Comics</a>
+<li><a href="../WingsComics/WingsComics.html">Wings Comics</a>
 <li><a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a>
 <li><a href="../CowgirlRomances/CowgirlRomances.html">Cowgirl Romances</a>
 <li><a href="../GhostComics/GhostComics.html">Ghost Comics</a>
-<li><a href="../WingsComics/WingsComics.html">Wings Comics</a>
 <li>3-D Circus (1 issue, 1953)
 <li>The First Christmas (1 issue, 1953; 3-D)
 <li>Indians (17 issues, 1950–1953)
