--- a/JumboComics/JumboComics.html
+++ b/JumboComics/JumboComics.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Jumbo1.jpg"> <br>
-167 issues from 1938 - 1953 by Fiction House
+167 issues from 1938 - 1953 by <a href="../FictionHouse/FictionHouse.html">Fiction House</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
