--- a/WingsComics/WingsComics.html
+++ b/WingsComics/WingsComics.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Wings1.jpg"> <br>
-124 issues from 1940 - 1954 by Fiction House
+124 issues from 1940 - 1954 by <a href="../FictionHouse/FictionHouse.html">Fiction House</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -34,7 +34,25 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Aviation-themed adventure, combat and history tales from pioneering comics publisher Fiction House.
+</p><p>
+Issue #1 Edited by Malcolm Reiss, Jerry Iger and Will Eisner. Stories and art by Arthur Peddy, Witmer Williams, Charles Sultan, Klaus Nordling, Gene Fawcette, and George Tuska. 64 pages, color, cover price $0.10. 
+<ul>
+<li>Action nurse Jane Martin puts the "combat" in "combat medicine"
+<li>The Phantom Falcons - Tom, Akeley, Dale, Jerry, and Parker - fight the Luftwaffe from their underground base in Switzerland
+<li>Greasemonkey Griffin is a military air mechanic whose life is a comedy of errors. 
+<li>Skull Squad
+<li>Parachute Patrol
+<li>Jane Martin
+<li>Clipper Kirk
+<li>F4 of the Air Intelligence
+<li>Suicide Smith
+<li>How Uncle Sam Trains His Warbirds
+<li>The Phantom Falcons
+<li>Wing Tips
+<li>The Hardluck Ace
+<li>Powder Burns
+</ul>
 </p>
 </body>
 </html>
