--- a/index.html
+++ b/index.html
@@ -6162,6 +6162,13 @@
 </tr>
 
 <tr>
+<td>Fight Comics</td>
+<td>1940</td>
+<td>Fiction House</td>
+<td><a href="FightComics/FightComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Filthy Rich</td>
 <td>2010</td>
 <td>Vertigo</td>
@@ -8688,6 +8695,13 @@
 <td>1954</td>
 <td>Atlas</td>
 <td><a href="JungleAction/JungleAction.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jungle Comics</td>
+<td>1940</td>
+<td>Fiction House</td>
+<td><a href="JungleComics/JungleComics.html">Details</a></td>
 </tr>
 
 <tr>
