--- a/FictionHouse/FictionHouse.html
+++ b/FictionHouse/FictionHouse.html
@@ -35,6 +35,17 @@
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse16.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="FictionHouse17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FictionHouse28.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -63,13 +74,17 @@ Other features in Jumbo Comics #1 included three by future industry legend <a hr
 <li><a href="../Firehair/Firehair.html">Firehair</a> (11 issues, 1950)
 <li><a href="../LongBow/LongBow.html">Long Bow</a> (9 issues, 1951)
 <li><a href="../Spirit/Spirit.html">The Spirit</a> (5 issues, 1952–54)
+<li><a href="FictionHouse19.jpg">Toyland</a> (4 issues, 1947, covers by Bob Lubbers)
+<li><a href="FictionHouse22.jpg">Jet Aces</a> (4 issues, 1952)
 <li><a href="../MovieComics/MovieComics.html">Movie Comics</a> (4 issues, 1946)
+<li><a href="FictionHouse26.jpg">War Birds</a> (3 issues, 1954)
+<li><a href="FictionHouse16.jpg">The Monster</a> (2 issues, 1953, covers by Maurice Whitman)
 <li><a href="FictionHouse11.jpg">3-D Circus</a> (1 issue, 1953)
 <li><a href="FictionHouse13.jpg">Apache</a> (1 issue, 1951)
 <li><a href="FictionHouse14.jpg">The First Christmas</a> (1 issue, 1953)
 <li><a href="FictionHouse15.jpg">Man O' Mars</a> (1 issue, 1953, cover by Maurice Whitman)
 <li><a href="FictionHouse4.jpg">Knockout Adventures</a> (1 issue, 1953, cover by Bill Benulis)
-<li><a href="FictionHouse16.jpg">The Monster</a> (2 issues, 1953, covers by Maurice Whitman)
+
 </p>
 </body>
 </html>
