--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -22,23 +22,16 @@ IDW Publishing also publishes comics based on the TV franchises Star Trek and CS
 </p><p>
 Beginning in 2008, the company licensed the Doctor Who series from the BBC, launching two concurrent titles: Doctor Who Classics, which reprints colorized comic strips featuring the past Doctors such as the Fourth Doctor and Fifth Doctor originally published in the late 1970's-early 1980's by Doctor Who Magazine, and Doctor Who: Agent Provocateur, an original six-part limited series featuring the Tenth Doctor and overseen and written by TV series script editor Gary Russell. An additional six-part limited series titled Doctor Who: The Forgotten started in mid-2008 by Tony Lee and Pia Guerra, as well as a series of monthly one-shot, self-contained stories. July 2009 saw the beginning of Doctor Who, an ongoing series featuring the Tenth Doctor, written by Tony Lee and illustrated by a rotating art team.
 </p><p>
-In 2010, IDW Publishing released the sequel to Michael San Giacomo's "Phantom Jack" Image Comics series with "Phantom Jack: The Nowhere Man Agenda." The graphic novel is notable because it features the death of the main character, a reporter who can turn invisible.
-</p><p>
-IDW Publishing formed an imprint with EA Games in late 2009, called EA Comics, to focus on adaptations of the latter's video games, with initial titles including Army of Two and Dragon Age.
+In 2010, IDW Publishing released the sequel to Michael San Giacomo's "Phantom Jack" Image Comics series with "Phantom Jack: The Nowhere Man Agenda." The graphic novel is notable because it features the death of the main character, a reporter who can turn invisible. IDW Publishing formed an imprint with EA Games in late 2009, called EA Comics, to focus on adaptations of the latter's video games, with initial titles including Army of Two and Dragon Age.
 </p><p>
 September 6, 2011, for the 10th anniversary of 9/11, IDW Publishing teamed up Charlie Foxtrot Entertainment and released the graphic novel Code Word: Geronimo, written by retired Marine Corps Captain Dale Dye and Julia Dye, drawn by Gerry Kissell with inker Amin Amat. Code Word: Geronimo reached #22 on Diamond Comics top 100 list its first month after release. During that same year, the company has published its first crossover series Infestation.
 </p><p>
-In March 2012 IDW Publishing announced it would release new comics based on Judge Dredd and The Crow. Also in 2012, Hasbro licensed the use of My Little Pony: Friendship Is Magic for an IDW comic book series. The company has also published Infestation 2.
+In March 2012 IDW Publishing announced it would release new comics based on Judge Dredd and The Crow. Also in 2012, Hasbro licensed the use of My Little Pony: Friendship Is Magic for an IDW comic book series. The company has also published Infestation 2. In February 2013, IDW Publishing announced a partnership with Cartoon Network to publish comics based on the network's television series and reprint older Cartoon Network comics.
 </p><p>
-In February 2013, IDW Publishing announced a partnership with Cartoon Network to publish comics based on the network's television series and reprint older Cartoon Network comics.
+On January 6, 2015, IDW Publishing announced it had acquired Top Shelf Productions. In February 2015, it was announced that IDW Publishing made a deal with Disney to continue the publication of the following comic books: Uncle Scrooge, Donald Duck, Mickey Mouse, and Walt Disney's Comics and Stories.
 </p><p>
-On January 6, 2015, IDW Publishing announced it had acquired Top Shelf Productions.
-</p><p>
-In February 2015, it was announced that IDW Publishing made a deal with Disney to continue the publication of the following comic books: Uncle Scrooge, Donald Duck, Mickey Mouse, and Walt Disney's Comics and Stories.
-</p><p>
-In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared universe of Hasbro brands, which was later known as the Hasbro Comic Book Universe. The first event was Revolution, followed by First Strike on 2017.
-</p><p>
-In July 2017, Sega announced a partnership with IDW to publish comics based on Sonic the Hedgehog beginning in 2018, following the conclusion/cancellation of the previous series by Archie Comics.
+In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared universe of Hasbro brands, which was later known as the Hasbro Comic Book Universe. The first event was Revolution, followed by First Strike on 2017. In July 2017, Sega announced a partnership with IDW to publish comics based on Sonic the Hedgehog beginning in 2018, following the conclusion/cancellation of the previous series by Archie Comics.
 </p>
+
 </body>
 </html>
