--- a/index.html
+++ b/index.html
@@ -8803,6 +8803,13 @@
 </tr>
 
 <tr>
+<td>Katsuhiro Otomo</td>
+<td>1954</td>
+<td>Creator</td>
+<td><a href="KatsuhiroOtomo/KatsuhiroOtomo.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kelley Jones</td>
 <td>1962</td>
 <td>Creator</td>
