--- a/index.html
+++ b/index.html
@@ -12937,6 +12937,13 @@
 </tr>
 
 <tr>
+<td>Sabrina</td>
+<td>1962</td>
+<td>Archie</td>
+<td><a href="Sabrina/Sabrina.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sachs and Violens</td>
 <td>1993</td>
 <td>Epic</td>
