--- a/Cerebus/Cerebus.html
+++ b/Cerebus/Cerebus.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Cerebus.jpg" title="Cerebus"> <br>
-
+300 issues from 1977 - 2004 by <a href="../AardvarkVanaheim/AardvarkVanaheim.html">Aardvark-Vanaheim</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
