--- a/NeilTheHorse/NeilTheHorse.html
+++ b/NeilTheHorse/NeilTheHorse.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="NeilTheHorse1.jpg"> <br>
-10 issues from 1983 - 1984 by Aardvard-Vanaheim, 5 issues 1984 - 1988 by Renegade Press
+10 issues from 1983 - 1984 by <a href="../AardvarkVanaheim/AardvarkVanaheim.html">Aardvard-Vanaheim</a>, 5 issues 1984 - 1988 by Renegade Press
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
