--- a/index.html
+++ b/index.html
@@ -359,6 +359,13 @@
 </tr>
 
 <tr>
+<td>Aardvark-Vanaheim</td>
+<td>1977</td>
+<td>Publisher</td>
+<td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aaron and Ahmed</td>
 <td>2011</td>
 <td>Vertigo</td>
@@ -8810,6 +8817,13 @@
 </tr>
 
 <tr>
+<td>Katzenjammer Kids</td>
+<td>1897</td>
+<td>King Features</td>
+<td><a href="KatzenjammerKids/KatzenjammerKids.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kelley Jones</td>
 <td>1962</td>
 <td>Creator</td>
@@ -8947,6 +8961,13 @@
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="KingDavid/KingDavid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Features</td>
+<td>1914</td>
+<td>Publisher</td>
+<td><a href="KingFeatures/KingFeatures.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15055,6 +15076,13 @@
 <td>1952</td>
 <td>Harvey</td>
 <td><a href="TombOfTerror/TombOfTerror.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tommy Siegel</td>
+<td>1995?</td>
+<td>Creator</td>
+<td><a href="TommySiegel/TommySiegel.html">Details</a></td>
 </tr>
 
 <tr>
