--- a/KingFeatures/KingFeatures.html
+++ b/KingFeatures/KingFeatures.html
@@ -37,7 +37,7 @@ King Features strips and panels
 <li>Barney Google and Snuffy Smith
 <li>Beetle Bailey
 <li>Better Half, The
-<li>Betty Boop
+<li><a href="../BettyBoop/BettyBoop.html">Betty Boop</a>
 <li>Betty Boop and Felix
 <li>Between Friends
 <li>Big Ben Bolt
@@ -61,7 +61,7 @@ King Features strips and panels
 <li>Edge City
 <li>Etta Kett
 <li>The Family Circus
-<li>Felix the Cat
+<li><a href="../Felix/Felix.html">Felix the Cat</a>
 <li>Flapper Filosofy
 <li>Flash Gordon
 <li>Franklin Fibbs
@@ -113,7 +113,7 @@ King Features strips and panels
 <li>Pete the Tramp
 <li>Phantom, The
 <li>Piranha Club
-<li>Popeye
+<li><a href="../Popeye/Popeye.html">Popeye</a>
 <li>Prince Valiant
 <li>Radio Patrol
 <li>Red Barry
