--- a/MaxFleischer/MaxFleischer.html
+++ b/MaxFleischer/MaxFleischer.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="MaxFleischer1.jpg"> <br>
-
+Founded Inkwell Studios in 1921 and Fleischer Studios in 1929
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -33,7 +33,11 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Max Fleischer (July 19, 1883 – September 25, 1972) was a Polish-American animator, inventor, film director and producer. Born in Kraków, Poland, Fleischer became a pioneer in the development of the animated cartoon and served as the head of Fleischer Studios, which he co-founded with his younger brother Dave, in the United States. He brought such animated characters as Koko the Clown, Betty Boop, Popeye, and Superman to the movie screen and was responsible for a number of technological innovations including the Rotoscope, the "Bouncing Ball" song films, and the "Stereoptical Process".
+Max Fleischer (July 19, 1883 – September 25, 1972) was a Polish-American animator, inventor, film director and producer. Born in Kraków, Poland, Fleischer became a pioneer in the development of the animated cartoon and served as the head of Fleischer Studios, which he co-founded with his younger brother Dave, in the United States. 
+</p><p>
+Fleischer Studios was an American corporation which originated as an animation studio located at 1600 Broadway, New York City, New York. It was founded in 1921 as Out of the Inkwell, inc. by brothers Max Fleischer and Dave Fleischer who ran the pioneering company from its inception until Paramount Pictures, the studio's parent company and the distributor of its films, acquired ownership. In its prime, Fleischer Studios was a premier producer of animated cartoons for theaters, with Walt Disney Productions becoming its chief competitor in the 1930s. 
+</p><p>
+Fleischer brought such animated characters as Koko the Clown, Betty Boop, Popeye, and Superman to the movie screen and was responsible for a number of technological innovations including the Rotoscope, the "Bouncing Ball" song films, and the "Stereoptical Process".
 </p><p>
 Fleischer produced his Out of the Inkwell films featuring "The Clown" character, which originated from his youngest brother Dave, who had worked as a sideshow clown at Coney Island. It was the one of the later tests made from footage of Dave as a clown that interested Bray. Out of the Inkwell featured the novelty of combining live action and animation and served as semi-documentaries with the appearance of Max Fleischer as the artist who dipped his pen into the ink bottle to produce the clown figure on his drawing board. While the technique of combining animation with live action was already established by others at the Bray Studio, it was Fleischer's clever use of it combined with Fleischer's realistic animation that made his series unique.
 </p><p>
