--- a/index.html
+++ b/index.html
@@ -2415,6 +2415,13 @@
 </tr>
 
 <tr>
+<td>Betty Boop</td>
+<td>1930</td>
+<td>Paramount</td>
+<td><a href="BettyBoop/BettyBoop.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beware</td>
 <td>1952</td>
 <td>Youthful</td>
@@ -6222,6 +6229,13 @@
 <td>2009</td>
 <td>DC</td>
 <td><a href="FlashRebirth/FlashRebirth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fleischer Studios</td>
+<td>1929</td>
+<td>Publisher</td>
+<td><a href="MaxFleischer/MaxFleischer.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12167,6 +12181,13 @@
 <td>1941</td>
 <td>Quality</td>
 <td><a href="PoliceComics/PoliceComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Popeye</td>
+<td>1929</td>
+<td>King Features</td>
+<td><a href="Popeye/Popeye.html">Details</a></td>
 </tr>
 
 <tr>
