Cupples and Leon

--- a/Ironjaw/Ironjaw.html
+++ b/Ironjaw/Ironjaw.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Ironjaw1.jpg"> <br>
-
+4 issues in 1975 by <a href="../AtlasSeaboard/AtlasSeaboard.html">Atlas Seaboard</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -28,7 +28,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Covers by Neal Adams!
 </p>
 </body>
 </html>
