--- a/index.html
+++ b/index.html
@@ -1222,10 +1222,24 @@
 </tr>
 
 <tr>
+<td>Alley Oop</td>
+<td>1932</td>
+<td>Newspaper Enterprise Association</td>
+<td><a href="AlleyOop/AlleyOop.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alpha Flight</td>
 <td>1983</td>
 <td>Marvel</td>
 <td><a href="AlphaFlight/AlphaFlight.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alphonse and Gaston</td>
+<td>1901</td>
+<td>Cupples &amp; Leon</td>
+<td><a href="AlphonseAndGaston/AlphonseAndGaston.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1450,6 +1464,13 @@
 <td>2001</td>
 <td>Dark Horse</td>
 <td><a href="AncientJoe/AncientJoe.html">Details</a></td>
+</tr>
+
+<tr>
+<td>And Her Name Was Maud</td>
+<td>1904</td>
+<td>Cupples &amp; Leon</td>
+<td><a href="AndHerNameWasMaud/AndHerNameWasMaud.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1849,6 +1870,13 @@
 <td>1951</td>
 <td>Publisher</td>
 <td><a href="AtlasComics/AtlasComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Atlas Seaboard Comics</td>
+<td>1974</td>
+<td>Publisher</td>
+<td><a href="AtlasSeaboard/AtlasSeaboard.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3213,6 +3241,13 @@
 </tr>
 
 <tr>
+<td>Calvin and Hobbes</td>
+<td>1985</td>
+<td>Universal Press Syndicate</td>
+<td><a href="CalvinAndHobbes/CalvinAndHobbes.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cameron Stewart</td>
 <td>1976</td>
 <td>Creator</td>
@@ -4309,6 +4344,13 @@
 <td>1949</td>
 <td>Marvel</td>
 <td><a href="Cupid/Cupid.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cupples &amp; Leon</td>
+<td>1902</td>
+<td>Publisher</td>
+<td><a href="CupplesLeon/CupplesLeon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6608,6 +6650,13 @@
 <td>2017</td>
 <td>Marvel</td>
 <td><a href="Gamora/Gamora.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Garfield</td>
+<td>1978</td>
+<td>United Press Syndicate</td>
+<td><a href="Garfield/Garfield.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11414,6 +11463,13 @@
 </tr>
 
 <tr>
+<td>Newspaper Enterprise Association</td>
+<td>1902</td>
+<td>Publisher</td>
+<td><a href="NewspaperEnterpriseAssociation/NewspaperEnterpriseAssociation.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Newuniversal</td>
 <td>2007</td>
 <td>Marvel</td>
@@ -15009,6 +15065,20 @@
 </tr>
 
 <tr>
+<td>Tigerman</td>
+<td>1975</td>
+<td>Atlas Seaboard</td>
+<td><a href="Tigerman/Tigerman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tillie the Toiler</td>
+<td>1925</td>
+<td>Cupples &amp; Leon</td>
+<td><a href="TillieTheToiler/TillieTheToiler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tim Lane (US)</td>
 <td>1975</td>
 <td>Creator</td>
@@ -15440,6 +15510,13 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="UnionJack/UnionJack.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Universal Press Syndicate</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="UniversalPressSyndicate/UniversalPressSyndicate.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16008,6 +16085,13 @@
 <td>1984</td>
 <td>Marvel</td>
 <td><a href="WestCoastAvengers/WestCoastAvengers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Western Action</td>
+<td>1975</td>
+<td>Atlas Seaboard</td>
+<td><a href="WesternAction/WesternAction.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16638,6 +16722,13 @@
 <td>1940</td>
 <td>MLJ</td>
 <td><a href="ZipComics/ZipComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zippy the Pinhead</td>
+<td>1971</td>
+<td>King Features</td>
+<td><a href="ZippyThePinhead/ZippyThePinhead.html">Details</a></td>
 </tr>
 
 <tr>
