--- a/FarSide/FarSide.html
+++ b/FarSide/FarSide.html
@@ -91,7 +91,7 @@
 
 Creator: Gary Larson<br>
 Series: newpaper strip series, collections<br>
-Publisher: Universal Press Syndicate<br>
+Publisher: <a href="../UniversalPressSyndicate/UniversalPressSyndicate.html">Universal Press Syndicate</a>
 <p>
 The Far Side is a single-panel comic created by Gary Larson and syndicated by Universal Press Syndicate, which ran from January 1, 1980, to January 1, 1995 (when Larson retired as a cartoonist). Its surrealistic humor is often based on uncomfortable social situations, improbable events, an anthropomorphic view of the world, logical fallacies, impending bizarre disasters, (often twisted) references to proverbs, or the search for meaning in life. Larson's frequent use of animals and nature in the comic is popularly attributed to his background in biology. Reruns are still printed in many newspapers.
 </p><p>
