--- a/NewspaperEnterpriseAssociation/NewspaperEnterpriseAssociation.html
+++ b/NewspaperEnterpriseAssociation/NewspaperEnterpriseAssociation.html
@@ -18,8 +18,7 @@ NEA later evolved into a general syndicate best known for syndicating the comic 
 <li>Freckles and His Friends
 <li>The Born Loser
 <li>Frank and Ernest
-<li>Captain Easy
-<li>Wash Tubbs
+<li><a href="../WashTubbsAndCaptEasy/WashTubbsAndCaptEasy.html">Wash Tubbs &amp Captain Easy</a>
 </p><p>
 Along with United Feature Syndicate, the NEA was part of United Media from 1978 to 2011, and is now a division of Andrews McMeel Syndication. The NEA once selected college All-America teams, and presented awards in professional football. 
 </p>
