--- a/WashTubbsAndCaptEasy/WashTubbsAndCaptEasy.html
+++ b/WashTubbsAndCaptEasy/WashTubbsAndCaptEasy.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="WashTubbsAndCaptEasy.jpg"> <br>
-Series: 1924 - 1988<br>
-Publisher: Newspaper Enterprise<br>
+From 1924 - 1988 by <a href="../NewspaperEnterpriseAssociation/NewspaperEnterpriseAssociation.html">Newspaper Enterprise Association</a><br>
 <p>
 Wash Tubbs was an American comic strip created by Roy Crane that ran from April 14, 1924 to January 10, 1988.
 </p><p>
