--- a/index.html
+++ b/index.html
@@ -380,6 +380,13 @@
 </tr>
 
 <tr>
+<td>Abbott and Costello</td>
+<td>1935</td>
+<td>Creator</td>
+<td><a href="AbbottCostello/AbbottCostello.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abe Sapien</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -1224,7 +1231,7 @@
 <tr>
 <td>Alley Oop</td>
 <td>1932</td>
-<td>Newspaper Enterprise Association</td>
+<td>Newspaper Enterprise</td>
 <td><a href="AlleyOop/AlleyOop.html">Details</a></td>
 </tr>
 
@@ -3556,10 +3563,10 @@
 </tr>
 
 <tr>
-<td>Cherry</td>
-<td>1982</td>
-<td>Last Gasp</td>
-<td><a href="Cherry/Cherry.html">Details</a></td>
+<td>Charlton</td>
+<td>1945</td>
+<td>Publisher</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3567,6 +3574,13 @@
 <td>1998</td>
 <td>DC</td>
 <td><a href="Chase/Chase.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cherry</td>
+<td>1982</td>
+<td>Last Gasp</td>
+<td><a href="Cherry/Cherry.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12468,7 +12482,14 @@
 </tr>
 
 <tr>
-<td><a name ="q">Quasar</td>
+<td><a name ="q">Quality Comics</td>
+<td>1937</td>
+<td>Publisher</td>
+<td><a href="QualityComics/QualityComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quasar</td>
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="Quasar/Quasar.html">Details</a></td>
@@ -15594,6 +15615,13 @@
 <td>1967</td>
 <td>Pilote</td>
 <td><a href="Valerian/Valerian.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Valiant Comics</td>
+<td>1989</td>
+<td>Publisher</td>
+<td><a href="ValiantComics/ValiantComics.html">Details</a></td>
 </tr>
 
 <tr>
