--- a/index.html
+++ b/index.html
@@ -9111,6 +9111,13 @@
 </tr>
 
 <tr>
+<td>Kitchen Sink Press</td>
+<td>1970</td>
+<td>Publisher</td>
+<td><a href="KitchenSinkPress/KitchenSinkPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kitty Pryde and Wolverine</td>
 <td>1984</td>
 <td>Marvel</td>
@@ -11740,6 +11747,13 @@
 <td>1991</td>
 <td>Epic</td>
 <td><a href="Olympians/Olympians.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Omaha the Cat Dancer</td>
+<td>1983</td>
+<td>Kitchen Sink</td>
+<td><a href="OmahaTheCatDancer/OmahaTheCatDancer.html">Details</a></td>
 </tr>
 
 <tr>
