--- a/Madman/Madman.html
+++ b/Madman/Madman.html
@@ -31,6 +31,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Madman10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Madman11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Madman12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Madman13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
