--- a/QualityComics/QualityComics.html
+++ b/QualityComics/QualityComics.html
@@ -13,23 +13,23 @@ Quality Comics was an American comic book publishing company which operated from
 </p><p>
 Notable, long-running titles published by Quality include Blackhawk, Feature Comics, G.I. Combat, Heart Throbs, Military Comics, Modern Comics, Plastic Man, Police Comics, Smash Comics, and The Spirit. While most of their titles were published by a company named Comic Magazines, from 1940 onwards all publications bore a logo that included the word "Quality". Notable creators associated with the company included Jack Cole, Reed Crandall, Will Eisner, Lou Fine, Gill Fox, Paul Gustavson, Bob Powell, and Wally Wood. 
 </p><p>
-<li>All Humor Comics #1–17 (1946–1949)
+<li><a href="../AllHumor/AllHumor.html">All Humor Comics</a> #1–17 (1946–1949)
 <li>The Barker #1–15 (1946–1949)
-<li>Blackhawk #9–107 (1944–1956; formerly Uncle Sam Quarterly #1–8; Blackhawk #108–273 subsequently published by DC Comics, 1957–1983)
+<li><a href="../Blackhawk/Blackhawk.html">Blackhawk</a> #9–107 (1944–1956)
 <li>Bride's Romance #1–23 (1953–1956)
 <li>Broadway Romances #1–5 (1950)
 <li>Buccaneers #19–27 (1950–1951; formerly Kid Eternity #1–18)
 <li>Buster Bear #1–10 (1953–1955)
 <li>Campus Loves #1–5 (1949–1950)
 <li>Candy #1–64 (1947–1956)
-<li>Crack Comics #1–62 (1940–1949; Crack Comics[Ashcan] #1)
+<li><a href="../CrackComics/CrackComics.html">Crack Comics</a> #1–62 (1940–1949; Crack Comics[Ashcan] #1)
 <li>Crack Western #63–84 (1949–1953; formerly Crack Comics #1–62; Jonesy #85(1) 2-8)
 <li>Diary Loves #2–31 (1949–1953; formerly Love Diary #1; G.I. Sweethearts #32-45 Girls in Love #46-57)
-<li>Doll Man #1–47 (1941–1953)
-<li>Egbert #1-20 (1946–1950)
+<li><a href="../DollMan/DollMan.html">Doll Man</a> #1–47 (1941–1953)
+<li><a href="../Egbert/Egbert.html">Egbert</a> #1-20 (1946–1950)
 <li>Exotic Romances #22–31 (1955–1956; formerly True War Romances #1–21)
 <li>Exploits of Daniel Boone #1–6 (1955–?)
-<li>Feature Funnies #1–20 (1937–1939);Feature Comics #21-144 (1939–1950)
+<li><a href="../FeatureFunnies/FeatureFunnies.html">Feature Funnies</a> #1–20 (1937–1939);Feature Comics #21-144 (1939–1950)
 <li>Flaming Love #1–6 (1949–1950)
 <li>Forbidden Love #1–4 (1950)
 <li>Gabby #11; issue numbering restarts, #2–9 (1953–1954; formerly Ken Shannon #1-10)
