--- a/index.html
+++ b/index.html
@@ -5657,6 +5657,20 @@
 </tr>
 
 <tr>
+<td>Egbert</td>
+<td>1946</td>
+<td>Quality</td>
+<td><a href="Egbert/Egbert.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Eggbert</td>
+<td>1959</td>
+<td>Pocket Books</td>
+<td><a href="Eggbert/Eggbert.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Egyptian Book of the Dead</td>
 <td>-1500</td>
 <td>Egyptian Collection</td>
